UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/AddressId__c.field-meta.xml
<CustomField>
    <fullName>AddressId__c</fullName>
    <label>AddressId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>