UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/BTN__c.field-meta.xml
<CustomField>
    <fullName>BTN__c</fullName>
    <label>Billing Number (BTN)</label>
    <type>Phone</type>
</CustomField>