UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/ConnectLineIDScreening__c.field-meta.xml
<CustomField>
    <fullName>ConnectLineIDScreening__c</fullName>
    <label>Connect Line ID Screening</label>
    <length>100</length>
    <type>Text</type>
</CustomField>