UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/DID_PortIn__c.field-meta.xml
<CustomField>
    <fullName>DID_PortIn__c</fullName>
    <label>DID PortIn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>