UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/DIDMDNNUmberInfo__c.field-meta.xml
<CustomField>
    <fullName>DIDMDNNUmberInfo__c</fullName>
    <label>DIDMDNNUmberInfo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>