UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/E911Type__c.field-meta.xml
<CustomField>
    <fullName>E911Type__c</fullName>
    <label>E911Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>