UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/FailoverNumber__c.field-meta.xml
<CustomField>
    <fullName>FailoverNumber__c</fullName>
    <label>Call Failover Phone Number</label>
    <type>Phone</type>
</CustomField>