UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/IncomingCallerID__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallerID__c</fullName>
    <label>Incoming Caller ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>