UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/InternationalDialing__c.field-meta.xml
<CustomField>
    <fullName>InternationalDialing__c</fullName>
    <label>International Dialing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>