UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/InternationalDialingOptions__c.field-meta.xml
<CustomField>
    <fullName>InternationalDialingOptions__c</fullName>
    <label>International Dialing Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>