UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/isDIDNumberValidated__c.field-meta.xml
<CustomField>
    <fullName>isDIDNumberValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDIDNumberValidated</label>
    <type>Checkbox</type>
</CustomField>