UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/isSubmitted__c.field-meta.xml
<CustomField>
    <fullName>isSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSubmitted</label>
    <type>Checkbox</type>
</CustomField>