UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/Local_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Local_Routing_Number__c</fullName>
    <label>Local Routing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>