UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/Location_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Due_Date__c</fullName>
    <label>Location Due Date</label>
    <type>Date</type>
</CustomField>