UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/MDN__c.field-meta.xml
<CustomField>
    <fullName>MDN__c</fullName>
    <label>Main Directory Number</label>
    <type>Phone</type>
</CustomField>