UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <formula>MID(SUBSTITUTE(MDN__c  ,&apos;-&apos;,&apos;&apos;),0,3)</formula>
    <label>NPA</label>
    <type>Text</type>
</CustomField>