UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/NumberOfCallPaths__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCallPaths__c</fullName>
    <label>Number of Call Paths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>