UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/NumberOfDIDs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDIDs__c</fullName>
    <label>Number of DIDs for this location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>