UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/OrderOfUNIs__c.field-meta.xml
<CustomField>
    <fullName>OrderOfUNIs__c</fullName>
    <label>Order Of UNIs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>