UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/PremisesId__c.field-meta.xml
<CustomField>
    <fullName>PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DID Location Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>DID Location Details</relationshipLabel>
    <relationshipName>DID_Location_Details</relationshipName>
    <type>Lookup</type>
</CustomField>