UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/Service_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Name__c</fullName>
    <formula>ServiceAccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Account Name</label>
    <type>Text</type>
</CustomField>