UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DID Location Details</relationshipLabel>
    <relationshipName>DID_Location_Details</relationshipName>
    <type>Lookup</type>
</CustomField>