UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>PremisesId__r.vlocity_cmt__State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>