UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/TestNumber__c.field-meta.xml
<CustomField>
    <fullName>TestNumber__c</fullName>
    <label>Customer Test #</label>
    <type>Phone</type>
</CustomField>