UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/Total_DID_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Total_DID_Numbers__c</fullName>
    <label>Total DID Numbers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>