UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/UCFLocationDetails__c.field-meta.xml
<CustomField>
    <fullName>UCFLocationDetails__c</fullName>
    <label>UCF Location Details</label>
    <type>TextArea</type>
</CustomField>