UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/UCFLocationMainPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>UCFLocationMainPhoneNumber__c</fullName>
    <label>UCF Location Main Phone Number</label>
    <type>Phone</type>
</CustomField>