UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/UCFNameValidation__c.field-meta.xml
<CustomField>
    <fullName>UCFNameValidation__c</fullName>
    <label>UCF Name Validation</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>