UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/UNI_Ids__c.field-meta.xml
<CustomField>
    <fullName>UNI_Ids__c</fullName>
    <description>comma separated list of UNI Ids to send to M6</description>
    <label>UNI Ids</label>
    <type>TextArea</type>
</CustomField>