UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/VOIPQualificationId__c.field-meta.xml
<CustomField>
    <fullName>VOIPQualificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOIP Qualification</label>
    <referenceTo>ftr_VOIP_Qualification__c</referenceTo>
    <relationshipLabel>DID Location Details</relationshipLabel>
    <relationshipName>DID_Location_Details</relationshipName>
    <type>Lookup</type>
</CustomField>