UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <formula>PremisesId__r.vlocity_cmt__PostalCode__c</formula>
    <label>ZipCode</label>
    <type>Text</type>
</CustomField>