UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Location_Details__c/listViews/DID_Locations.listView-meta.xml
<ListView>
    <fullName>DID_Locations</fullName>
    <columns>NAME</columns>
    <columns>BTN__c</columns>
    <columns>StreetAddress__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>ZipCode__c</columns>
    <columns>IncomingCallerID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderId__c</field>
        <operation>equals</operation>
        <value>10106868</value>
    </filters>
    <label>DID Locations</label>
</ListView>